# cfast-mcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: copilot-commit-message-instructions.md
.github/workflows/: python-publish.yml  test.yml
src/cfast_mcp/: __init__.py  errors.py  registry.py  serialization.py  server.py
src/cfast_mcp/tools/: __init__.py  ceiling_floor_vents.py  compartments.py  devices.py  fires.py  materials.py  mechanical_vents.py  model.py  simulation.py  surface_connections.py  wall_vents.py
tests/: conftest.py  test_ceiling_floor_vents.py  test_compartments.py  test_devices.py  test_errors.py  test_fires.py  test_materials.py  test_mechanical_vents.py  test_model.py  test_registry.py  test_run.py  test_serialization.py  test_simulation.py  test_surface_connections.py  test_wall_vents.py
