[project]
name = "cfast-mcp"
version = "0.1.0"
description = "MCP server for CFAST (Fire and Smoke Transport), built on top of PyCFAST."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "WYGAS Benoît", email = "97663334+bewygs@users.noreply.github.com" }
]
maintainers = [
    { name = "WYGAS Benoît", email = "97663334+bewygs@users.noreply.github.com" }
]
keywords = ["fire", "simulation", "cfast", "modeling", "fire-safety", "engineering", "mcp", "server", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "mcp[cli]>=1.27.0",
    "pycfast>=0.2.1",
]

[project.urls]
Homepage = "https://github.com/bewygs/cfast-mcp"
Repository = "https://github.com/bewygs/cfast-mcp"
Issues = "https://github.com/bewygs/cfast-mcp/issues"

[project.scripts]
cfast-mcp = "cfast_mcp.server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.15.1",
    "pytest>=8.4.2",
    "mypy>=1.19.1",
    "pre-commit>=4.3.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "pandas-stubs>=2.3.3.260113",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfast_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "D",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "DOC",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "local: marks tests that require CFAST to be installed",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pycfast.*"
ignore_missing_imports = true
